Added UDP capabilities to improve speed, still need to embed proper master IP